<resources>
    <string name="app_name">Story Map App</string>
    <string name="add">Add Story</string>
    <string name="settings">Settings</string>
    <string name="add_label">New Story</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_language">Change Language</string>
    <string name="content_description_media">image</string>
    <string name="logout">Log Out</string>
    <string name="have_acc">Already Have an Account?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="new_user_register_now">Register Now!</string>
    <string name="desc_register">Register for Better Experience!</string>
    <string name="reg_nama">Full Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="permission">Permission Denied!</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="camera_info">Failed to take pictures</string>
    <string name="fail_info_cam">Failed to open Camera</string>
    <string name="password_too_short">Minimum 6 Character Password!</string>
    <string name="invalid_email_address">Invalid Email Address!</string>
    <string name="name_error_too_long">Maximum 20 Character Name!</string>
    <string name="text_empty">Form must be filled!</string>
    <string name="welcome">Welcome!</string>
    <string name="login_success">Login Successfully!</string>
    <string name="upload_success">Upload Successfully!</string>
    <string name="next">Next</string>
    <string name="register_success">Registered Successfully!</string>
    <string name="info_register">User has successfully registered</string>
    <string name="greeting">Welcome, %1$s!</string>
    <string name="picture_empty">Picture Not Found!</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="style_failed" translatable="false">Style parsing failed.</string>
    <string name="style_error">\"Can\'t find style. Error: \"</string>
    <string name="green" translatable="false">#28B463</string>
    <string name="resource_not_found">Resource not found</string>
    <string name="create">Create</string>
    <string name="imageDesc" translatable="false">imageUser</string>
    <string name="camerabutton" translatable="false">cameraButton</string>
    <string name="flipcamera" translatable="false">flipCamera</string>
    <string name="imageshow" translatable="false">imageShow</string>
    <string name="desc_msg_null">Description must filled!</string>
</resources>